feat:landed page added

--- a/css/components.html
+++ b/css/components.html
@@ -14,22 +14,22 @@
 
     <h1 class="padding-sm">Avatar</h1>
     <div class="avatar padding-sm">
-        <img class="lg-img img-round img-border" src="../../assets/avatar2.jfif" alt="Avatar">
+        <img class="lg-img border-round img-border" src="../../assets/avatar2.jfif" alt="Avatar">
     </div>
     <div class="avatar padding-sm">
-        <img class="img-round img-border md-img" src="../../assets/avatar2.jfif" alt="Avatar">
+        <img class="border-round img-border md-img" src="../../assets/avatar2.jfif" alt="Avatar">
     </div>
     <div class="avatar padding-sm">
-        <img class="img-round img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar">
+        <img class="border-round img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar">
     </div>
     <div class="avatar padding-sm">
-        <img class="img-round img-border xs-img" src="../../assets/avatar.jfif" alt="Avatar">
+        <img class="border-round img-border xs-img" src="../../assets/avatar.jfif" alt="Avatar">
     </div>
     <div class="avatar padding-sm">
-        <img class="img-square img-border xs-img" src="../../assets/avatar.jfif" alt="Avatar">
+        <img class="border-square img-border xs-img" src="../../assets/avatar.jfif" alt="Avatar">
     </div>
     <div class="avatar padding-sm">
-        <img class="img-square img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar">
+        <img class="border-square img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar">
     </div>
 
 
