--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=800" />
     <title>beadUI</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
-    <nav class="shadow-box navbar">
+    <header class="shadow-box navbar">
         <div class="first-col">
             <h1 class="hero-font font1 margin-md title">Bead
                  <span class="text-primary margin-none">UI</span></h1>
@@ -28,7 +29,7 @@
                 <li class="inline-block padding-xs"><a class="text-primary" href="#"><i class='fab fa-twitter fa-lg'></i></a></li>
             </ul>
         </div>
-      </nav>
+    </header>
     <main class="margin-md ">
         <div class="centered vertical-direction section1">
              <h1 class="text-secondary font1 mb-lg">Build Sites Faster</h1>
@@ -37,17 +38,18 @@
                  <button class="hero-btn bg-primary  padding-xs font3 pointer">Installation</button>
              </div>
         </div>
-    <div class="grid-section-col-2">
+    <div class="grid-section-col-2 ">
         <div class="left-main-col">
             <h1 class="mb-lg">Installation Guide</h1>
-            <p class="text-secondary hero-font font3 mb-lg">beadUI helps you build your website faster and beautiful.
-                Copy the following cdn to get started with beadUI</p>
+            <p class="text-secondary hero-font font3 mb-lg">BeadUI helps you build
+                 your website faster and beautiful. Copy the following
+                cdn to get started with beadUI</p>
                 <button class="hero-btn bg-primary  padding-xs font3 pointer">Documentation</button>
         </div>
-        <div class="right-main-col ml-auto">
+        <div class="right-main-col ml-auto ">
             <iframe 
             src="https://carbon.now.sh/embed?bg=rgba%28213%2C234%2C236%2C1%29&t=night-owl&wt=sharp&l=htmlmixed&width=680&ds=true&dsyoff=57px&dsblur=85px&wc=true&wa=true&pv=15px&ph=18px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--%2520paste%2520this%2520link%2520in%2520the%2520head%2520section%2520of%2520your%2520html%2520file%2520to%2520get%2520started%2520--%253E%250A%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522style.css%2522%253E%250A"
-            style="width: 706px; height: 180px; border:0; transform: scale(1); overflow-x:hidden;"
+             style = "width: 450px; height: 180px; border:0; transform: scale(1); overflow-x:hidden;"
             sandbox="allow-scripts allow-same-origin">
           </iframe>
         </div>
