--- a/css/components.html
+++ b/css/components.html
@@ -49,16 +49,16 @@
     <!-- badge -->
     <h1 class="padding-sm">Badge</h1>
     <div class="avatar padding-sm avatar-badge">
-        <img class="img-round img-border md-img" src="../../assets/avatar2.jfif" alt="Avatar">
-        <div class="status-circle md-circle bg-warning"></div>
+        <img class="border-round img-border md-img" src="../../assets/avatar2.jfif" alt="Avatar">
+        <div class="status-circle md-circle "></div>
     </div>
     <div class="avatar padding-sm avatar-badge">
-        <img class="img-round img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar">
-        <div class="status-circle sm-circle bg-success"></div>
+        <img class="border-round img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar">
+        <div class="status-circle sm-circle "></div>
     </div>
     <div class="avatar padding-sm avatar-badge">
-        <img class="img-round img-border xs-img" src="../../assets/avatar2.jfif" alt="Avatar">
-        <div class="status-circle xs-circle bg-danger"></div>
+        <img class="border-round img-border xs-img" src="../../assets/avatar2.jfif" alt="Avatar">
+        <div class="status-circle xs-circle "></div>
     </div>
 
     <!-- icon with badge -->
@@ -69,7 +69,15 @@
         <div class="status-circle icon-top-badge bg-danger ">4</div>  
     </div>
 
-    
+    <!-- button -->
+    <h1 class="padding-sm">Button</h1>
+<div class="margin-md">
+    <button class="btn bg-success padding-sm rm-border margin-sm">Success Button</button>
+    <button class="btn btn-outline  padding-sm margin-sm font3 hover-secondary">Primary Button</button>
+    <button class="hero-btn bg-primary padding-xs font3 pointer mb-lg rm-border margin-sm">Documentation</button>
+    <button class="rm-border margin-sm font3 pointer btn-transparent hover-primary">Home</button>
+</div>
+    <script src="component.js"></script>
     
 </body>
 </html>
