feat: added floating action and icon btn

--- a/css/components.html
+++ b/css/components.html
@@ -62,21 +62,36 @@
     </div>
 
     <!-- icon with badge -->
-    <div class="avatar avatar-badge margin-md"><i class="fas fa-2x fa-cart-plus cart text-lightpink"> </i>
-        <div class="status-circle icon-top-badge bg-danger ">4</div>  
+    <div class="avatar avatar-badge margin-md text-primary"><i class="fas fa-2x fa-cart-plus cart "> </i>
+        <div class="status-circle icon-top-badge ">4</div>  
     </div>
-    <div class="avatar avatar-badge"><i class="fas fa-3x fa-envelope cart text-lightpink"> </i>
-        <div class="status-circle icon-top-badge bg-danger ">4</div>  
+
+    <div class="avatar avatar-badge "><i class="fas fa-3x fa-envelope cart "> </i>
+        <div class="status-circle icon-top-badge ">4</div>  
     </div>
 
     <!-- button -->
+
+    
     <h1 class="padding-sm">Button</h1>
-<div class="margin-md">
-    <button class="btn bg-success padding-sm rm-border margin-sm">Success Button</button>
-    <button class="btn btn-outline  padding-sm margin-sm font3 hover-secondary">Primary Button</button>
-    <button class="hero-btn bg-primary padding-xs font3 pointer mb-lg rm-border margin-sm">Documentation</button>
-    <button class="rm-border margin-sm font3 pointer btn-transparent hover-primary">Home</button>
-</div>
+
+    <div class="margin-md">
+
+        <button class="reset btn btn-outline  padding-sm margin-md font3 hover-secondary">Primary Button</button>
+
+        <button class="rm-border bg-vibrant light-text  padding-xs font3 pointer margin-md">Documentation</button>
+
+        <button class="reset rm-border margin-md font2 pointer btn-transparent hover-primary">Home</button>
+
+        <button class="reset btn padding-sm rm-border margin-md">Default Button</button>
+
+        <button class="btn reset padding-sm margin-md bg-vibrant rm-border light-text"><i class="fa fa-trash"></i> icon btn</button>
+
+        <button class="reset rm-border bg-primary border-round light-text float margin-md">
+            <i class="fa fa-arrow-up evenly-padding-sm font3"></i>
+        </button>
+
+    </div>
     <script src="component.js"></script>
     
 </body>
