badge page added

--- a/css/components.html
+++ b/css/components.html
@@ -63,11 +63,11 @@
 
     <!-- icon with badge -->
     <div class="avatar avatar-badge margin-md text-primary"><i class="fas fa-2x fa-cart-plus cart "> </i>
-        <div class="status-circle icon-top-badge ">4</div>  
+        <div class="status-circle icon-top-badge bg-green">4</div>  
     </div>
 
-    <div class="avatar avatar-badge "><i class="fas fa-3x fa-envelope cart "> </i>
-        <div class="status-circle icon-top-badge ">4</div>  
+    <div class="avatar avatar-badge "><i class="fas fa-3x fa-envelope cart text-vibrant"> </i>
+        <div class="status-circle icon-top-badge bg-red">4</div>  
     </div>
 
     <!-- button -->
