refactor - a to aside-link

--- a/docsite/docs.html
+++ b/docsite/docs.html
@@ -29,14 +29,14 @@
     <aside>
         <h1 class="padding-xs text-secondary ">Documentation</h1>
         <ul class="mb-lg padding-xs style-list-none">
-        <li class="mb-lg padding-xs font3 "><a class="decor-none text-vibrant active" href="./docs.html">Getting started</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none text-vibrant" href="components/avatar.html">Avatar</a> </li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none text-vibrant" href="components/alert.html">Alert</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none text-vibrant" href="components/badge.html">Badge</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none text-vibrant" href="components/button.html">Button</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none text-vibrant" href="components/card.html">Card</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none text-vibrant" href="components/image.html">Image</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none text-vibrant" href="components/input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant active" href="./docs.html">Getting started</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/avatar.html">Avatar</a> </li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/alert.html">Alert</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/badge.html">Badge</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/button.html">Button</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/card.html">Card</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/image.html">Image</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/input.html">Input</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
