feat:button page done

--- a/css/components.html
+++ b/css/components.html
@@ -90,6 +90,8 @@
         <button class="reset rm-border bg-primary border-round light-text float margin-md">
             <i class="fa fa-arrow-up evenly-padding-sm font3"></i>
         </button>
+        <button class="reset btn-transparent rm-border"><i class="fas fa-3x fa-cart-plus text-vibrant"> </i>
+        </button>
 
     </div>
     <script src="component.js"></script>
