feat: added button

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     <main class="margin-md ">
         <div class="centered vertical-direction main-section">
              <h1 class="text-secondary font1 mb-lg">Build Sites Faster With Us</h1>
-             <p class="text-secondary hero-font font3 mb-lg">BeadsUI helps you build
-                your website faster and beautiful. Copy the following
-               cdn to get started with beadsUI</p>
-               <a href="./docsite/docs.html"><button class="rm-border bg-vibrant light-text  padding-xs font3 pointer mb-lg" href="">Documentation</button></a>
+             <p class="text-secondary hero-font font3 mb-lg about">BeadsUI helps you quickly design and build
+                your website beautifully. It has lots of reusable classes which help you customize your site easily and fast.</p>
+                <div class="centered">
+                    <a href="./docsite/docs.html"><button class="rm-border bg-vibrant light-text  padding-sm font3 pointer border-square" href="">Getting Started</button></a>
+                     <a href="./docsite/components/avatar.html"><button class="reset btn btn-outline  padding-sm margin-md font3 hover-secondary">Documentation</button></a>
+                </div>
              
         </div>
     </main>
