feat: rating icon added

--- a/css/components.html
+++ b/css/components.html
@@ -99,6 +99,13 @@
                 <div class="left-pane evenly-padding-sm">
                     <h2 class="card-heading ">Wind Chyme</h2>
                     <p class="text-secondary">Exclusively from Gujrat </p>
+                    <div class="stars">
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                     <p class="text-primary font3">₹499 only</p>
                 </div>
                 <i class="far fa-heart fa-lg evenly-padding-sm card-icon border-round"></i>
@@ -106,13 +113,20 @@
             </div>
         </div>
         <!-- card with dismiss -->
-        <div class="card simple-card mb-lg  margin-md reset">
+        <div class="card simple-card mb-lg  margin-md reset card-dismiss">
             <img src="../assets/item2.jpg" alt="" class="card-img">
-            <button class="btn rm-border btn-transparent light-text font2 dismiss-card-btn reset">X</button>
+            <button class="btn rm-border btn-transparent font2 dismiss-card-btn reset">X</button>
             <div class="card-textarea">
                 <div class="left-pane evenly-padding-sm">
                     <h2 class="card-heading ">Basket</h2>
                     <p class="text-secondary">Environment friendly basket</p>
+                    <div class="stars">
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                     <p class="text-primary font3">₹199 only</p>
                 </div>
                
@@ -125,6 +139,13 @@
             <div class="overlay-card-content text-vibrant">
                 <h1 class="font2 card-heading">Baskets</h1>
                 <p >Environment friendly basket</p>
+                <div class="stars">
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
                     <p class=" font3">₹199 only</p>
             </div>
             <div class="bottom-overlayed-icon">
@@ -142,6 +163,13 @@
                 <div class="left-pane evenly-padding-sm">
                     <h2 class="card-heading ">Marble Flower Pot</h2>
                     <p class="text-secondary">Exclusively from Jaipur </p>
+                    <div class="stars">
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                     <p class="text-primary font3">₹359 only</p>
                 </div>
                 <i class="far fa-heart fa-lg evenly-padding-sm card-icon border-round"></i>
@@ -170,6 +198,13 @@
                 <div class=" evenly-padding-sm">
                     <h2 class="card-heading ">Marble Flower Pot</h2>
                     <p class="text-secondary">Exclusively from Jaipur </p>
+                    <div class="stars">
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                     <p class="text-primary font3">₹359 only</p>
                 </div>
                 
