--- a/docsite/docs.html
+++ b/docsite/docs.html
@@ -17,19 +17,24 @@
     
         <div class="last-col ml-auto padding-xs centered">
             <ul class="style-list-none">
-                <li class="inline-block "><a class="text-primary" href="#">
+                <li class="inline-block "><a class="text-primary" href="https://github.com/developers-codz">
                     <i class='fab fa-github fa-lg'></i>
                 </a>
                    </li>
-                <li class="inline-block "><a class="text-primary" href="#"><i class='fab fa-linkedin fa-lg'></i></a></li>
-                <li class="inline-block "><a class="text-primary" href="#"><i class='fab fa-twitter fa-lg'></i></a></li>
+                <li class="inline-block "><a class="text-primary" href="https://www.linkedin.com/in/kajal-kumari-52bab41aa"><i class='fab fa-linkedin fa-lg'></i></a></li>
+                <li class="inline-block "><a class="text-primary" href="https://twitter.com/Kajal3310"><i class='fab fa-twitter fa-lg'></i></a></li>
             </ul>
         </div>
     </header>
     <aside>
-        <h1 class="padding-xs text-secondary ">Documentation</h1>
+        <h1 class="padding-xs">Getting Started</h1>
         <ul class="mb-lg padding-xs style-list-none">
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant active" href="./docs.html">Getting started</a></li>
+            <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant active" href="./docs.html">Installation</a></li>
+            <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="#">Typography</a></li>
+            <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="#">Color</a></li>
+        </ul>
+        <h1 class="padding-xs">Documentation</h1>
+        <ul class="mb-lg padding-xs style-list-none">
         <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/avatar.html">Avatar</a> </li>
         <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/alert.html">Alert</a></li>
         <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/badge.html">Badge</a></li>
@@ -70,12 +75,12 @@
 
         <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
         <ul class="style-list-none mb-lg ">
-            <li class="inline-block padding-xs"><a class="light-text" href="#">
+            <li class="inline-block padding-xs"><a class="light-text" href="httlps://github.com/developers-codz">
                 <i class='fab fa-github fa-lg'></i>
             </a>
                </li>
-            <li class="inline-block padding-xs"><a class="light-text" href="#"><i class='fab fa-linkedin fa-lg'></i></a></li>
-            <li class="inline-block padding-xs"><a class="light-text" href="#"><i class='fab fa-twitter fa-lg'></i></a></li>
+            <li class="inline-block padding-xs"><a class="light-text" href="https://www.linkedin.com/in/kajal-kumari-52bab41aa"><i class='fab fa-linkedin fa-lg'></i></a></li>
+            <li class="inline-block padding-xs"><a class="light-text" href="https://twitter.com/Kajal3310"><i class='fab fa-twitter fa-lg'></i></a></li>
         </ul>
         <small>© 2022 beadsUI <a class="decor-none light-text" href="https://github.com/developers-codz">Developers-codz</a> </small>
         
