feat: added references

--- a/docsite/docs.html
+++ b/docsite/docs.html
@@ -63,8 +63,17 @@
   sandbox="allow-scripts allow-same-origin">
 </iframe>
             </div>
+            <p class="font3 "> Happy Building 😇</p>
         </div>
-        <p class="font3 "> Happy Building 😇</p>
+        <div class="section margin-md">
+
+            <h2 class="mb-lg">References :-</h2>
+            <ol class="padding-sm text-secondary font3">
+                <li>SVG Logo: Font Awesome</li>
+                <li>Demo images: Unsplash</li>
+                <li>Fonts: Google fonts</li>
+            </ol>
+        </div>
         </div>
       
     </main>
