feat:text list & nav done

--- a/docsite/docs.html
+++ b/docsite/docs.html
@@ -40,6 +40,13 @@
         <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/card.html">Card</a></li>
         <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/image.html">Image</a></li>
         <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/textutil.html">Text Utils</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/list.html">List</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/navigation.html">Navigation</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/modal.html">Modal</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/rating.html">Rating</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/toast.html">Toast</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/grid.html">grid</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
