fix:badge small, color and font

--- a/docsite/docs.html
+++ b/docsite/docs.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="docs.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
-<body>
+<body> 
     <header class="shadow-box navbar">
         <div class="first-col">
-            <h1 class="hero-font  margin-md title text-vibrant  shadow-text">Beads
+            <h1 class="hero-font  margin-md title text-primary  shadow-text">Beads
                  <span class="text-primary margin-none">UI</span></h1>
         </div>
     
@@ -29,24 +29,24 @@
     <aside>
         <h1 class="padding-xs">Getting Started</h1>
         <ul class="mb-lg padding-xs style-list-none">
-            <li class="padding-xs font3"><a class="decor-none aside-link text-vibrant active" href="./docs.html">Installation</a></li>
+            <li class="padding-xs font3"><a class="decor-none aside-link text-primary active" href="./docs.html">Installation</a></li>
         </ul>
         <h1 class="padding-xs">Documentation</h1>
         <ul class="mb-lg padding-xs style-list-none">
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/avatar.html">Avatar</a> </li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/alert.html">Alert</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/badge.html">Badge</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/button.html">Button</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/card.html">Card</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/image.html">Image</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/input.html">Input</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/textutil.html">Text Utils</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/list.html">List</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/navigation.html">Navigation</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/modal.html">Modal</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/rating.html">Rating</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/toast.html">Toast</a></li>
-        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="components/grid.html">grid</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/avatar.html">Avatar</a> </li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/alert.html">Alert</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/badge.html">Badge</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/button.html">Button</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/card.html">Card</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/image.html">Image</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/textutil.html">Text Utils</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/list.html">List</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/navigation.html">Navigation</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/modal.html">Modal</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/rating.html">Rating</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/toast.html">Toast</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-primary" href="components/grid.html">Grid</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
@@ -76,10 +76,9 @@
                 This font is free to use and available on google fonts</p>
                 <div class="iframe-wrapper">
                     <iframe
-                    src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252FImport%2520this%2520URL%2520in%2520css%2520File%2520to%2520getting%2520started%250A%2540import%2520url%28%27https%253A%252F%252Ffonts.googleapis.com%252Fcss2%253Ffamily%253DSource%252BSerif%252B4%2526display%253Dswap%27%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+                    src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%252F%252FImport%2520this%2520URL%2520in%2520css%2520File%2520to%2520getting%2520started%250A%250A%2540import%2520url%28%27https%253A%252F%252Ffonts.googleapis.com%252Fcss2%253Ffamily%253DOpen%252BSans%2526family%253DSource%252BSerif%252B4%2526display%253Dswap%27%29%253B%250A"
                     sandbox="allow-scripts allow-same-origin">
                   </iframe>
-</iframe>
                 </div>
                 <p class="font3 "> Happy Building 😇</p>
 
@@ -99,7 +98,7 @@
     
     <footer class="centered vertical-direction bg-secondary">
 
-        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none" href="components/avatar.html">Avatar <i class="fa fa-arrow-right "></i> </a></button>
+        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="components/avatar.html">Avatar <i class="fa fa-arrow-right "></i> </a></button>
 
         <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
         <ul class="style-list-none mb-lg ">
