--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="shadow-box navbar">
         <div class="first-col">
-            <h1 class="hero-font  margin-md title text-vibrant  shadow-text">Beads
+            <h1 class="hero-font  margin-md title text-primary shadow-text">Beads
                  <span class="text-primary margin-none">UI</span></h1>
         </div>
     
@@ -33,7 +33,7 @@
              <p class="text-secondary hero-font font3 mb-lg about">BeadsUI helps you quickly design and build
                 your website beautifully. It has lots of reusable classes which help you customize your site easily and fast.</p>
                 <div class="centered">
-                    <a href="./docsite/docs.html"><button class="rm-border bg-vibrant light-text  padding-sm font3 pointer border-square" href="">Getting Started</button></a>
+                    <a href="./docsite/docs.html"><button class="rm-border bg-primary light-text  padding-sm font3 pointer border-square" href="">Getting Started</button></a>
                      <a href="./docsite/components/avatar.html"><button class="reset btn btn-outline  padding-sm margin-md font3 hover-secondary">Documentation</button></a>
                 </div>
              
